--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@300;500;700&family=Pridi:wght@600&display=swap');
 body {
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #FFFFFF;
+
+  -webkit-box-pack: start; 
+  -ms-flex-pack: start; 
+  justify-content: flex-start; 
+  -webkit-box-align: start; 
+  -ms-flex-align: start; 
+  align-items: flex-start;
+  
 }
 
 code {
